--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -97,7 +97,7 @@
 	showHiddenFiles = "Hidden files",
 	showApplicationIcons = "Application icons",
 
-	aboutSystem = "About this PC",
+	aboutSystem = "About system",
 	updates = "Updates",
 	update = "Refresh",
 	shutdown = "Shutdown",
