--- a/Localizations/OS/Russian.lang
+++ b/Localizations/OS/Russian.lang
@@ -154,21 +154,9 @@
 	inCurrentDirectory = "В текущей директории",
 
 	settings = "Настройки",
-	months = {
-		Jan = "Января",
-		Feb = "Февраля",
-		Mar = "Марта",
-		Apr = "Апреля",
-		May = "Мая",
-		Jun = "Июня",
-		Jul = "Июля",
-		Aug = "Августа",
-		Sep = "Сентября",
-		Oct = "Октября",
-		Nov = "Ноября",
-		Dec = "Декабря",
-	},
+	dateAndTime = "Дата и время",
 	timezone = "Часовой пояс",
+	dateFormat = "Формат даты",
 
 	errorWhileRunningProgram = "Ошибка при выполнении ",
 	sendedFeedback = "Отчет отправлен",
