Возвращение приложения 3DPrint #3

--- a/Applications/3DPrint/Localizations/French.lang
+++ b/Applications/3DPrint/Localizations/French.lang
@@ -1,33 +1,34 @@
 {
-	new = "Nouveau",
-	open = "Ouvrir",
-	save = "Sauvegarder",
-	disabled = "Désactivé",
-	enabled = "Activée",
-	add = "Ajouter",
-	remove = "Retirer",
-	rotate = "Tourner",
-	flip = "Retourner",
-	color = "Couleur",
-	offset = "Décalage",
-	scale = "Échelle",
-	projectorEnabled = "Activée",
-	xAxis = "Axe X",
-	yAxis = "Axe Y",
-	zAxis = "Axe z",
-	lightLevel = "Niveau de lumière",
-	emitRedstone = "Emettre des redstone",
-	collidable = "Collision",
-	buttonMode = "Mode bouton",
-	label = "Étiquette",
-	tooltip = "Info-bulle",
-	tintEnabled = "Utiliser la teinte",
-	tintColor = "Couleur de teinte",
-	texture = "Texture",
-	print = "Print",
-	modelSettings = "Paramètres du modèle",
-	blockSettings = "Bloquer les paramètres",
-	projectorSettings = "Paramètres du projecteur",
-	elementSettings = "Paramètres de forme",
-	failedToPrint = "Échec de print",
+	exit = "Sortie"
+	new = "Nouveau"
+	open = "Ouvrir"
+	save = "Sauvegarder"
+	disabled = "Désactivé"
+	enabled = "Activée"
+	add = "Ajouter"
+	remove = "Retirer"
+	rotate = "Tourner"
+	flip = "Retourner"
+	color = "Couleur"
+	offset = "Décalage"
+	scale = "Échelle"
+	projectorEnabled = "Activée"
+	xAxis = "Axe X"
+	yAxis = "Axe Y"
+	zAxis = "Axe z"
+	lightLevel = "Niveau de lumière"
+	emitRedstone = "Emettre des redstone"
+	collidable = "Collision"
+	buttonMode = "Mode bouton"
+	label = "Étiquette"
+	tooltip = "Info-bulle"
+	tintEnabled = "Utiliser la teinte"
+	tintColor = "Couleur de teinte"
+	texture = "Texture"
+	print = "Print"
+	modelSettings = "Application"
+	blockSettings = "Propriétés du modèle"
+	projectorSettings = "Propriétés du projecteur"
+	elementSettings = "Propriétés de forme"
+	failedToPrint = "Échec de print"
 }
