--- a/Applications/3DPrint/Localizations/English.lang
+++ b/Applications/3DPrint/Localizations/English.lang
@@ -1,4 +1,5 @@
 {
+	exit = "Exit",
 	new = "New",
 	open = "Open",
 	save = "Save",
@@ -25,9 +26,9 @@
 	tintColor = "Tint color",
 	texture = "Texture",
 	print = "Print",
-	modelSettings = "Model settings",
-	blockSettings = "Block settings",
-	projectorSettings = "Projector settings",
-	elementSettings = "Shape settings",
+	modelSettings = "Application",
+	blockSettings = "Model properties",
+	projectorSettings = "Projector properties",
+	elementSettings = "Shape properties",
 	failedToPrint = "Failed to print",
 }
