--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -23,6 +23,7 @@
 	select = "Choose application…",
 	keepInDock = "Keep in dock",
 	closeAllWindows = "Close all windows",
+	closeWindow = "Close",
 	newWindow = "New window",
 	launchWithArguments = "Launch with arguments",
 	dontShowAnymore = "Don't show again",
