--- a/Applications/3DPrint/Localizations/Ukrainian.lang
+++ b/Applications/3DPrint/Localizations/Ukrainian.lang
@@ -13,8 +13,8 @@
 	offset = "Відступ",
 	scale = "Масштаб",
 	projectorEnabled = "Увімкнути",
-	xAxis = "Ось X",
-	yAxis = "Ось Y",
+	xAxis = "Вісь X",
+	yAxis = "Вісь Y",
 	zAxis = "Вісь Z",
 	lightLevel = "Освітлення",
 	emitRedstone = "Редстоун-сигнал",
