--- a/Applications/AppMarket/Localization/Ukrainian.lang
+++ b/Applications/AppMarket/Localization/Ukrainian.lang
@@ -6,7 +6,7 @@
 	newMessage = "Написати повідомлення",
 	newMessagePersonal = "Особисте повідомлення",
 	newMessageToDeveloper = "Написати повідомлення",
-	dialogWith = "Діалог з",
+	dialogWith = "Діалог з ",
 	send = "Відправити",
 	toWho = "Кому:",
 	typeMessageText = "Введіть текст повідомлення",
@@ -35,7 +35,7 @@
 	mainFileName = "Ім'я головного файлу",
 	iconURL = "URL іконки",
 	description = "Опис",
-	dependenciesAndResources = "Завісімосі і ресурси",
+	dependenciesAndResources = "Залежності і ресурси",
 	save = "Зберегти",
 	cancel = "Відміна",
 	fileName = "Ім'я файлу",
