--- a/Applications/MineCodeIDE/Localization/Ukrainian.lang
+++ b/Applications/MineCodeIDE/Localization/Ukrainian.lang
@@ -18,7 +18,7 @@
 	selectAndPasteColor = "Вибрати і вставити колір",
 	enableAutoBrackets = "Включити авто-дужки",
 	disableAutoBrackets = "Відключити авто-дужки",
-	url = "Http://example.com/something.lua",
+	url = "http://example.com/something.lua",
 	getFromWeb = "Завантажити з URL",
 	debugging = "Отладчик на рядку",
 	runtimeError = "Помилка при виконанні програми",
@@ -56,7 +56,7 @@
 	color = "Колір",
 	toggleTopToolBar = "Показати панель Інстурмент",
 	find = "Знайти",
-	findSomeShit = "Давай знайдемо якусь хуйню ...",
+	findSomeShit = "Давай знайдемо якесь лайно ...",
 	cut = "Вирізати",
 	copy = "Копіювати",
 	paste = "Вставити",
@@ -64,5 +64,5 @@
 	edit = "Редагувати",
 	comment = "Коментувати",
 	indent = "Табулювати",
-	unindent = "Детабуліровать",
+	unindent = "Детабулювати",
 }
