Фикс открытия файла по URL

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -19,7 +19,8 @@
 	enableAutoBrackets = "Enable autobrackets",
 	disableAutoBrackets = "Disable autobrackets",
 	url = "http://example.com/something.lua",
-	getFromWeb = "Download from URL",
+	getFromWeb = "Open from URL",
+	downloading = "Downloading file...",
 	debugging = "Debugger on line ",
 	runtimeError = "Runtime error",
 	variablesNotAvailable = "No variables found",
