--- a/Applications/MineCodeIDE/Localization/Russian.lang
+++ b/Applications/MineCodeIDE/Localization/Russian.lang
@@ -19,7 +19,8 @@
 	enableAutoBrackets = "Включить авто-скобки",
 	disableAutoBrackets = "Отключить авто-скобки",
 	url = "http://example.com/something.lua",
-	getFromWeb = "Загрузить по URL",
+	getFromWeb = "Открыть по URL",
+	downloading = "Идет загрузка файла...",
 	debugging = "Отладчик на строке ",
 	runtimeError = "Ошибка при выполнении программы",
 	variablesNotAvailable = "Не найдено возможных переменных",
