Да ебучий ж гитхуб десктоп

--- a/Applications/MineCodeIDE/Localization/Ukrainian.lang
+++ b/Applications/MineCodeIDE/Localization/Ukrainian.lang
@@ -18,9 +18,8 @@
 	selectAndPasteColor = "Вибрати і вставити колір",
 	enableAutoBrackets = "Включити авто-дужки",
 	disableAutoBrackets = "Відключити авто-дужки",
-	url = "Http://example.com/something.lua",
+	url = "http://example.com/something.lua",
 	getFromWeb = "Завантажити з URL",
-	downloading = "Триває завантаження файлу...",
 	debugging = "Отладчик на рядку",
 	runtimeError = "Помилка при виконанні програми",
 	variablesNotAvailable = "Чи не знайдено можливих змінних",
@@ -42,10 +41,10 @@
 	properties = "Налаштування",
 	about = "Про програму",
 	quit = "Вийти з MineCode",
-	line = " рядок, ",
-	symbol = " символ ",
-	lines = " рядків, ",
-	symbols = " символів",
+	line = " рядок, ",
+	symbol = " символ ",
+	lines = " рядків, ",
+	symbols = " символів",
 	file = "Файл",
 	cursor = "Курсор: ",
 	new = "Новий",
@@ -57,7 +56,7 @@
 	color = "Колір",
 	toggleTopToolBar = "Показати панель Інстурмент",
 	find = "Знайти",
-	findSomeShit = "Давай знайдемо якусь хуйню ...",
+	findSomeShit = "Давай знайдемо якесь лайно ...",
 	cut = "Вирізати",
 	copy = "Копіювати",
 	paste = "Вставити",
@@ -65,5 +64,5 @@
 	edit = "Редагувати",
 	comment = "Коментувати",
 	indent = "Табулювати",
-	unindent = "Детабуліровать",
+	unindent = "Детабулювати",
 }
