--- a/Applications/Settings/Localizations/Russian.lang
+++ b/Applications/Settings/Localizations/Russian.lang
@@ -9,6 +9,7 @@
 	screenHeight = "Высота",
 	screenPreferredMonitor = "Монитор",
 	screenScaleInfo = "Использование этой опции позволит подобрать оптимальное разрешение экрана, чтобы избавиться от эффекта \"черных полос\"",
+	screenInvalidResolution = "Текст в полях ввода должен состоять из цифр, а максимальное разрешение не должно превышать %d символов",
 
 	wallpaper = "Обои и заставка",
 	wallpaperWallpaper = "Обои",
