--- a/Applications/Settings/Localizations/French.lang
+++ b/Applications/Settings/Localizations/French.lang
@@ -9,6 +9,7 @@
 	screenHeight = "Hauteur",
 	screenPreferredMonitor = "Surveiller",
 	screenScaleInfo = "L'utilisation de cette option vous permettra de sélectionner la résolution d'écran optimale pour éliminer l'effet des \"barres noires\"",
+	screenInvalidResolution = "Le texte dans les champs de saisie doit être composé de chiffres et la résolution maximale ne doit pas dépasser %d caractères",
 	
 	wallpaper = "Fonds d'écran et économiseur d'écran",
 	wallpaperWallpaper = "Fonds d'écran",
