--- a/Applications/Settings/Localizations/Ukrainian.lang
+++ b/Applications/Settings/Localizations/Ukrainian.lang
@@ -9,6 +9,7 @@
 	screenHeight = "Висота",
 	screenPreferredMonitor = "Монітор",
 	screenScaleInfo = "Використання цієї опції дозволить підібрати оптимальний дозвіл екрана, щоб позбутися від ефекту \"чорних смуг \"",
+	screenInvalidResolution = "Текст в полях введення повинен складатися з цифр, а максимальна роздільна здатність не повинно перевищувати %d символів",
 
 	wallpaper = "Обои і заставка",
 	wallpaperWallpaper = "Шпалери",
