--- a/Applications/Settings/Localizations/Ukrainian.lang
+++ b/Applications/Settings/Localizations/Ukrainian.lang
@@ -11,7 +11,7 @@
 	screenScaleInfo = "Використання цієї опції дозволить підібрати оптимальний дозвіл екрана, щоб позбутися від ефекту \"чорних смуг \"",
 	screenInvalidResolution = "Текст в полях введення повинен складатися з цифр, а максимальна роздільна здатність не повинно перевищувати %d символів",
 
-	wallpaper = "Обои і заставка",
+	wallpaper = "Фон та заставка",
 	wallpaperWallpaper = "Шпалери",
 	wallpaperScreensaver = "Заставка",
 	wallpaperScreensaverPath = "Шлях до скрипту заставки",
