--- a/Applications/Nanomachines/Localizations/Ukrainian.lang
+++ b/Applications/Nanomachines/Localizations/Ukrainian.lang
@@ -13,4 +13,6 @@
 	saveConfiguration = "Зберегти конфігурацію",
 	saveFailed = "Збереження не вдалося: в інвентарі немає несконфігурірованних наніта",
 	notSynced = "Відбулася розсинхронізація з наніта. Будь ласка, закрийте програму і запустити знову.",
+	notWireless = "Комп'ютер має модем, проте наніти сприймають команди виключно по бездротовій мережі. Вставте бездротової модем і спробуйте ще раз",
+	noModem = "Комп'ютер не має бездротового модему для відправки і прийому команд Наніта по мережі",
 }
