И это тоже не ВК. Совсем-совсем не ВК. В этом мире вообще ничто не ВК, все иллюзорно

--- a/Applications/VK/Localizations/English.lang
+++ b/Applications/VK/Localizations/English.lang
@@ -28,6 +28,7 @@
 		wall_reply = "wall reply",
 		sticker = "sticker",
 		gift = "gift",
+		audio_message = "voice",
 	},
 	
 	documents = "Documents",
