Дохуярил скроллинг и автоподгрузку говна ведрами при достижении лимитов. Также добавил фичу загрузки файлов из опенкомов прямо в доки ВК и в личку впоследствии. Пиздец ебала с этими мультипарт/форм-датами, но ниче, справились. В принципе, это уже релизная, пускай и малофункциональная версия приложухи. Есть новости и диалоги, чтоб с поцыками побазарить

--- a/Applications/VK/Localizations/English.lang
+++ b/Applications/VK/Localizations/English.lang
@@ -1,4 +1,6 @@
 {
+	leftBarOffset = 5,
+	
 	invalidPassword = "Invalid login or password",
 	username = "E-mail or phone number",
 	password = "Password",
@@ -11,6 +13,7 @@
 
 	news = "News",
 
+	send = "Send",
 	conversations = "Conversations",
 	you = "You: ",
 	typeMessageHere = "Type message here",
@@ -30,6 +33,7 @@
 		gift = "gift",
 		audio_message = "voice",
 	},
+	sentFromMineOS = " (Sent via MineOS VK Client)",
 	
 	documents = "Documents",
 
