--- a/Applications/VK/Localizations/French.lang
+++ b/Applications/VK/Localizations/French.lang
@@ -1,164 +1,43 @@
 {
-	leftBarOffset = 7,
-
-	invalidPassword = "Неверный логин или пароль",
-	username = "E-mail или номер телефона",
-	password = "Пароль",
-	login = "Войти",
-	saveLogin = "Сохранять данные входа:",
-
-	profile = "Профиль",
-	sendMessage = "Сообщение",
-	addToFriends = "Добавить в друзья",
-	friendRequestSent = "Заявка отправлена",
-	userSubscribedToYou = "Подписан на вас",
-	userIsYourFriend = "У вас в друзьях",
-
-	profileCounters = {
-		{ field = "followers", description = "подписчиков" },
-		{ field = "friends", description = "друзей" },
-		{ field = "photos", description = "фото" },
-		{ field = "videos", description = "видео" },
-		{ field = "audios", description = "аудио" },
-	},
-	profileShowAdditional = "Показать подробную информацию",
-	profileHideAdditional = "Скрыть подробную информацию",
-	profileTitleMainInformation = "Основная информация",
-	profileTitlePersonal = "Жизненная позиция",
-	profileTitleAdditions = "Личная информация",
-	profileTitleContacts = "Контакты",
-	profileKeys = {
-		education = "Образование",
-		inspiredBy = "Вдохновляют",
-		relation = "Отношения",
-		birthday = "День рождения",
-		city = "Город",
-		homeCity = "Родной город",
-		languages = "Языки",
-		occupation = "Место работы",
-		mobilePhone = "Моб. телефон",
-		homePhone = "Доп. телефон",
-		site = "Веб-сайт",
-		activities = "Деятельность",
-		interests = "Интересы",
-		music = "Любимая музыка",
-		movies = "Любимые фильмы",
-		books = "Любимые книги",
-		tv = "Любимые шоу",
-		games = "Любимые игры",
-		quotes = "Любимые цитаты",
-		religion = "Мировоззрение",
-		political = "Полит. взгляды",
-		peopleMain = "Главное в людях",
-		lifeMain = "Главное в жизни",
-		alcohol = "Отн. к алкоголю",
-		smoking = "Отн. к курению",
-	},
-	months = {
-		"января",
-		"февраля",
-		"марта",
-		"апреля",
-		"мая",
-		"июня",
-		"июля",
-		"августа",
-		"сентября",
-		"октября",
-		"ноября",
-		"декабря",
-	},
-	relationStatuses = {
-		{
-			"не замужем",
-			"есть подруга",
-			"помолвлена",
-			"замужем",
-			"всё сложно",
-			"в активном поиске",
-			"влюблена",
-			"в гражданском браке",
-			[0] = "не указано",
-		},
-		{
-			"не женат",
-			"есть друг",
-			"помолвлен",
-			"женат",
-			"всё сложно",
-			"в активном поиске",
-			"влюблён",
-			"в гражданском браке",
-			[0] = "не указано",
-		}
-	},
-	personalPoliticalTypes = {
-		"Коммунистические",
-		"Социалистические",
-		"Умеренные",
-		"Либеральные",
-		"Консервативные",
-		"Монархические",
-		"Ультраконсервативные",
-		"Индифферентные",
-		"Либертарианские",
-	},
-	personalPeopleMainTypes = {
-		"Ум и креативность",
-		"Доброта и честность",
-		"Красота и здоровье",
-		"Власть и богатство",
-		"Смелость и упорство",
-		"Юмор и жизнелюбие",
-	},
-	personalLifeMainTypes = {
-		"Семья и дети",
-		"Карьера и деньги",
-		"Развлечения и отдых",
-		"Наука и исследования",
-		"Совершенствование мира",
-		"Саморазвитие",
-		"Красота и искусство",
-		"Слава и влияние",
-	},
-	personalBlyadTypes = {
-		"Резко негативное",
-		"Негативное",
-		"Компромиссное",
-		"Нейтральное",
-		"Положительное",
-	},
-
-	friends = "Друзья",
-	friendsOnline = "Друзья онлайн",
-
-	news = "Новости",
-
-	send = "Отправить",
-	conversations = "Сообщения",
-	you = "Вы: ",
-	typeMessageHere = "Напишите сообщение...",
-	fwdMessages = "Сообщения: ",
-	attachments = "Вложения: ",
-	attachmentsTypes = {
-		photo = "фото",
-		video = "видео",
-		audio = "аудио",
-		doc = "документ",
-		link = "ссылка",
-		market = "товар",
-		market_album = "каталог товаров",
-		wall = "запись",
-		wall_reply = "репост",
-		sticker = "стикер",
-		gift = "подарок",
-		audio_message = "аудио",
-	},
-	sentFromMineOS = " (Отправлено через MineOS VK Client)",
+	leftBarOffset = 5,
 	
-	documents = "Документы",
+	invalidPassword = "Nom d'utilisateur ou mot de passe incorrect",
+	username = "E-mail ou numéro de téléphone",
+	password = "Mot de passe",
+	login = "S'identifier",
+	saveLogin = "Enregistrer les données d'autorisation:",
 
-	settings = "Настройки",
+	profile = "Profil",
+	
+	friends = "Copains",
 
-	exit = "Выйти",
+	news = "Nouvelles",
+
+	send = "Envoyer",
+	conversations = "Conversations",
+	you = "Toi: ",
+	typeMessageHere = "Tapez le message ici",
+	fwdMessages = "Messages: ",
+	attachments = "Pièces jointes: ",
+	attachmentsTypes = {
+		photo = "photo",
+		video = "vidéo",
+		audio = "l'audio",
+		doc = "document",
+		link = "lien",
+		market = "makret",
+		market_album = "market_album",
+		wall = "message sur le Mur",
+		wall_reply = "réponse murale",
+		sticker = "autocollant",
+		gift = "cadeau",
+		audio_message = "voix",
+	},
+	sentFromMineOS = " (Envoyé via le client MineOS VK)",
+	
+	documents = "Documents",
+
+	settings = "Paramètres",
+
+	exit = "Connectez - Out",
 }
