--- a/Applications/VK/Localizations/Ukrainian.lang
+++ b/Applications/VK/Localizations/Ukrainian.lang
@@ -1,175 +1,43 @@
 {
-	leftBarOffset = 7,
+	leftBarOffset = 10,
 
-	invalidPassword = "Неверный логин или пароль",
-	username = "E-mail или номер телефона",
+	invalidPassword = "Невірний логін або пароль",
+	username = "Електронна пошта або номер телефону",
 	password = "Пароль",
-	login = "Войти",
-	saveLogin = "Сохранять данные входа:",
+	login = "Увійти",
+	saveLogin = "Зберегти дані авторизації :",
 
-	loadCountConversations = "Число загружаемых диалогов",
-	loadCountMessages = "Число загружаемых сообщений",
-	loadCountNews = "Число загружаемых новостей",
-	scrollSpeed = "Скорость прокрутки",
-	loadCountWall = "Число загружаемых постов",
-	loadCountFriends = "Число загружаемых друзей",
-	loadCountDocs = "Число загружаемых документов",
+	profile = "Профіль",
+	
+	friends = "Друзі",
 
-	profile = "Профиль",
-	message = "Сообщение",
-	sendMessage = "Отправить сообщение",
-	addToFriends = "Добавить в друзья",
-	friendRequestSent = "Заявка отправлена",
-	userSubscribedToYou = "Подписан на вас",
-	userIsYourFriend = "У вас в друзьях",
+	news = "Новини",
 
-	profileCounters = {
-		{ field = "followers", description = "подписчиков" },
-		{ field = "friends", description = "друзей" },
-		{ field = "photos", description = "фото" },
-		{ field = "videos", description = "видео" },
-		{ field = "audios", description = "аудио" },
-	},
-	profileShowAdditional = "Показать подробную информацию",
-	profileHideAdditional = "Скрыть подробную информацию",
-	profileTitleMainInformation = "Основная информация",
-	profileTitlePersonal = "Жизненная позиция",
-	profileTitleAdditions = "Личная информация",
-	profileTitleContacts = "Контакты",
-	profileKeys = {
-		education = "Образование",
-		inspiredBy = "Вдохновляют",
-		relation = "Отношения",
-		birthday = "День рождения",
-		city = "Город",
-		homeCity = "Родной город",
-		languages = "Языки",
-		occupation = "Место работы",
-		mobilePhone = "Моб. телефон",
-		homePhone = "Доп. телефон",
-		site = "Веб-сайт",
-		activities = "Деятельность",
-		interests = "Интересы",
-		music = "Любимая музыка",
-		movies = "Любимые фильмы",
-		books = "Любимые книги",
-		tv = "Любимые шоу",
-		games = "Любимые игры",
-		quotes = "Любимые цитаты",
-		religion = "Мировоззрение",
-		political = "Полит. взгляды",
-		peopleMain = "Главное в людях",
-		lifeMain = "Главное в жизни",
-		alcohol = "Отн. к алкоголю",
-		smoking = "Отн. к курению",
-	},
-	months = {
-		"января",
-		"февраля",
-		"марта",
-		"апреля",
-		"мая",
-		"июня",
-		"июля",
-		"августа",
-		"сентября",
-		"октября",
-		"ноября",
-		"декабря",
-	},
-	relationStatuses = {
-		{
-			"не замужем",
-			"есть подруга",
-			"помолвлена",
-			"замужем",
-			"всё сложно",
-			"в активном поиске",
-			"влюблена",
-			"в гражданском браке",
-			[0] = "не указано",
-		},
-		{
-			"не женат",
-			"есть друг",
-			"помолвлен",
-			"женат",
-			"всё сложно",
-			"в активном поиске",
-			"влюблён",
-			"в гражданском браке",
-			[0] = "не указано",
-		}
-	},
-	personalPoliticalTypes = {
-		"Коммунистические",
-		"Социалистические",
-		"Умеренные",
-		"Либеральные",
-		"Консервативные",
-		"Монархические",
-		"Ультраконсервативные",
-		"Индифферентные",
-		"Либертарианские",
-	},
-	personalPeopleMainTypes = {
-		"Ум и креативность",
-		"Доброта и честность",
-		"Красота и здоровье",
-		"Власть и богатство",
-		"Смелость и упорство",
-		"Юмор и жизнелюбие",
-	},
-	personalLifeMainTypes = {
-		"Семья и дети",
-		"Карьера и деньги",
-		"Развлечения и отдых",
-		"Наука и исследования",
-		"Совершенствование мира",
-		"Саморазвитие",
-		"Красота и искусство",
-		"Слава и влияние",
-	},
-	personalBlyadTypes = {
-		"Резко негативное",
-		"Негативное",
-		"Компромиссное",
-		"Нейтральное",
-		"Положительное",
-	},
-
-	friends = "Друзья",
-	friendsOnline = "Друзья онлайн",
-
-	news = "Новости",
-
-	send = "Отправить",
-	conversations = "Сообщения",
-	you = "Вы: ",
-	typeMessageHere = "Напишите сообщение...",
-	fwdMessages = "Сообщения: ",
-	attachments = "Вложения: ",
+	send = "Відправити",
+	conversations = "Бесіди",
+	you = "Ви: ",
+	typeMessageHere = "Введіть повідомлення тут",
+	fwdMessages = "Повідомлення: ",
+	attachments = "Вкладені файли: ",
 	attachmentsTypes = {
 		photo = "фото",
-		video = "видео",
-		audio = "аудио",
+		video = "відео",
+		audio = "аудіо",
 		doc = "документ",
-		link = "ссылка",
-		market = "товар",
-		market_album = "каталог товаров",
-		wall = "запись",
-		wall_reply = "репост",
-		sticker = "стикер",
-		gift = "подарок",
-		audio_message = "аудио",
+		link = "посилання",
+		market = "макрет",
+		market_album = "market_album",
+		wall = "настінний пост",
+		wall_reply = "стіни відповіді",
+		sticker = "наклейка",
+		gift = "подарунок",
+		audio_message = "голос",
 	},
-	sentFromMineOS = " (Отправлено через MineOS VK Client)",
+	sentFromMineOS = " (Відправлено через клієнта MineOS VK)",
 	
-	documents = "Документы",
-	documentsCount = "Всего документов",
-	documentsAdd = "Загрузить документ",
+	documents = "Документи",
 
-	settings = "Настройки",
+	settings = "Налаштування",
 
-	exit = "Выйти",
+	exit = "Вийти",
 }
