Добавил поддержку кастомных цветовых схем из внешних файлов. S O S N O O L E Y

--- a/Applications/VK/Localizations/Russian.lang
+++ b/Applications/VK/Localizations/Russian.lang
@@ -1,6 +1,9 @@
 {
 	leftBarOffset = 7,
 
+	settingsStyle = "Цветовая схема",
+	settingsAdditional = "Дополнительно",
+
 	invalidPassword = "Неверный логин или пароль",
 	username = "E-mail или номер телефона",
 	password = "Пароль",
