Потестил execute из VK API, тем самым значительно ускорил загрузку инфы профиля, заодно добавил фичу "общие друзья"

--- a/Applications/VK/Localizations/English.lang
+++ b/Applications/VK/Localizations/English.lang
@@ -142,7 +142,8 @@
 	},
 
 	friends = "Friends",
-	friendsOnline = "Friends online",
+	friendsOnline = "Online friends",
+	friendsMutual = "Mutual friends",
 
 	news = "Newsfeed",
 
