--- a/Applications/Settings/Localizations/Russian.lang
+++ b/Applications/Settings/Localizations/Russian.lang
@@ -87,4 +87,10 @@
 	systemRAM = "Управление памятью",
 	systemUnload = "Выгрузить библиотеку",
 	systemInfo = "Данная опция позволяет экономить память, выгружая неиспользуемые библиотеки методом \"Weak Link\". Отключите ее, если столкнетесь с какими-либо странностями или глюками в поведении сложных взаимозависимых систем",
+
+	users = "Пользователи",
+	usersAdd = "Добавить пользователя",
+	usersList = "Список пользователей",
+	usersTypeNameHere = "Введите никнейм",
+	usersInfo = "Вы можете создать приватный доступ к компьютеру. Для регистрации указанный пользователь должен быть онлайн",
 }
