--- a/Applications/Settings/Localizations/Ukrainian.lang
+++ b/Applications/Settings/Localizations/Ukrainian.lang
@@ -87,4 +87,10 @@
 	systemRAM = "Управління пам'яттю",
 	systemUnload = "Вивантажити бібліотеку",
 	systemInfo = "Дана опція дозволяє економити пам'ять, вивантажуючи невикористовувані бібліотеки методом \"Weak Link \". Вимкніть її, якщо зіткнетеся з якими-небудь дивацтвами або глюками в поведінці складних взаємозалежних систем",
+
+	users = "Користувач",
+	usersAdd = "Додати користувача",
+	usersList = "Список користувачів",
+	usersTypeNameHere = "Введіть нікнейм",
+	usersInfo = "Ви можете створити приватний доступ до комп'ютера. Для реєстрації вказаний користувач повинен бути онлайн",
 }
