--- a/Applications/AppMarket/Localization/Ukrainian.lang
+++ b/Applications/AppMarket/Localization/Ukrainian.lang
@@ -27,8 +27,8 @@
 	statisticsReviewsCount = "Число відгуків",
 	statisticsPopularPublication = "(Популярна публікація)",
 
-	whatsNew = "Что нового",
-	whatsNewInVersion = "Что нового в версии",
+	whatsNew = "Що нового",
+	whatsNewInVersion = "Що нового у версії",
 	areYouSure = "Ви впевнені, що хочете видалити публікацію?",
 	createShortcut = "Створити ярлик на робочому столі",
 	editing = "Редагування публікації",
