Added "Upload to Pastebin" feature, cleared localization files, fixed Compressor library

--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -1,109 +1,121 @@
 {
-	iconPath = "Шлях до іконки",
-	downloading = "Триває завантаження файлу",
-	networkFTPNewConnection = "FTP-підключення",
-	networkFTPConnections = "FTP-підключення",
+	downloading = "Виконується завантаження",
+	CPUArchitecture = "архітектура процесора",
+	RAMControl = "Контроль оперативної пам'яті ",
+	packageUnloading = "Автоматичне розвантаження",
+	networkFTPNewConnection = "FTP-з'єднання",
+	networkFTPConnections = "FTP-підключень",
 	networkFTPAddress = "Адреса сервера",
 	networkFTPPort = "Порт сервера",
 	networkFTPUser = "Користувач",
 	networkFTPPassword = "Пароль",
+	updatingFileList = "Оновлення списку файлів...",
 	network = "Мережа",
-	networkTimeout = "Віддалений комп'ютер не відповів на запит",
-	networkAccessDenied = "Доступ до файлової системи віддаленого комп'ютера заборонено. Зв'яжіться з його власником для надання відповідних привілеїв",
+	networkTimeout = "Віддалений комп'ютер не відповідає",
+	networkAccessDenied = "Доступ до файлової системи віддаленого комп'ютера заборонений. Зв'яжіться з його власником, щоб отримати відповідні привілеї",
+	networkAllowReadAndWrite = "Доступ до файлової системи ",
+	networkModemNotAvailable = "Підключення модему для використання мережевих функцій",
+	networkState = "Включити мережевий режим",
+	networkComputers = "Параметри мережевих ПК",
+	networkName = "Ім'я цього ПК",
+	networkSearchRadius = "Радіус пошуку",
 	openWith = "Відкрити за допомогою",
-	select = "Вибрати програму ...",
-	keepInDock = "Залишити в Dock",
+	select = "Вибрати додаток…",
+	keepInDock = "Зберігати в доці",
 	closeAllWindows = "Закрити всі вікна",
-	closeWindow = "Закрити",
+	closeWindow = "Закривати",
 	newWindow = "Нове вікно",
-	launchWithArguments = "Запустити з аргументами",
-	dontShowAnymore = "Більше не показувати",
+	launchWithArguments = "Запуск з аргументами",
+	dontShowAnymore = "Більше не показувати ",
 	newName = "Нове ім'я",
 	folderName = "Ім'я папки",
-	fileName = "Ім'я файла",
+	fileName = "Ім'я файлу",
 	applicationName = "Ім'я програми",
-	file = "Файл",
-	notExists = "не існує",
-	alreadyExists = "вже існує",
+	file = "Папка",
+	notExists = "не існувати",
+	alreadyExists = "вже існувати",
 	inDirectory = "в директорії",
-	needReplace = "Замінити?",
-	yes = "Так",
+	needReplace = "Замінити його?",
+	yes = "Стверджувальна відповідь",
 	no = "Ні",
-	cancel = "Скасувати",
-	open = "Відкрити",
-	applyToAll = "Застосувати до всіх",
-	toDirectory = "в директорії",
+	cancel = "Анулювавши",
+	open = "Відкритий",
+	applyToAll = "Поширюватися на всіх",
+	toDirectory = "в каталозі",
 	copying = "Копіювання",
-	faylaBlyad = "файлу",
+	faylaBlyad = "папка",
 
-	resolution = "Розширення екрану",
-	pressAnyKeyToContinue = "Натисніть будь-яку клавішу, щоб продовжити",
-
-	areYouSure = "Ви впевнені?",
+	areYouSure = "Ти впевнена?",
 	emptyTrash = "Очистити кошик",
 	type = "Тип",
 	size = "Розмір",
 	date = "Дата",
 	path = "Шлях",
 	folder = "Папка",
-	unknown = "Невідомо",
-	calculatingSize = "йде підрахунок ...",
+	unknown = "Невідомий",
+	calculatingSize = "ощадливий…",
 
-	properties = "Властивості",
+	properties = "Властивість",
 	newFolderFromChosen = "Нова папка з обраного",
-	create = "Створити",
-	newFolder = "Папку",
-	newFile = "Файл",
-	newFileFromURL = "Файл по URL",
+	create = "Новий",
+	newFolder = "Папка",
+	newFile = "Папка",
+	newFileFromURL = "Файл з URL",
 	newImage = "Зображення",
-	newApplication = "Додаток MineOS",
-	paste = "Вставити",
-	copy = "Копіювати",
-	cut = "Вирізати",
+	newApplication = "Додаток MineOS ",
+	paste = "Паста",
+	copy = "Копія",
+	cut = "Відрізавши",
 	edit = "Редагувати",
+	editInPhotoshop = "Редагування в Photoshop",
 	rename = "Перейменувати",
-	editShortcut = "Редагувати ярлик",
+	editShortcut = "Змінити ярлик",
 	createShortcut = "Створити ярлик",
-	addToDock = "Додати в Dock",
+	addToDock = "Додати в док",
 	removeFromDock = "Видалити з Dock",
-	moveRight = "Пересунути правіше",
-	moveLeft = "Пересунути лівіше",
-	archive = "Додати до архіву",
-	delete = "Видалити",
+	moveRight = "Перемістити вправо",
+	moveLeft = "Перемістити вліво",
+	archive = "Додати в архів",
+	delete = "Виключати",
 	addToFavourites = "Додати в обране",
 	removeFromFavourites = "Видалити з обраного",
-	setAsWallpaper = "Встановити як шпалери",
+	setAsWallpaper = "Встановити в якості шпалер",
 	showPackageContent = "Показати вміст пакету",
-	showContainingFolder = "Відкрити що містить папку",
-	flashEEPROM = "Записати на EEPROM",
-	flashingEEPROM = "Йде прошивка. Не вимикайте комп'ютер",
+	showContainingFolder = "Показати папку",
+	flashEEPROM = "Спалах до EEPROM",
+	flashingEEPROM = "Блимає в процесі. Не вимикати комп'ютер",
 
-	sortBy = "Впорядкувати",
-	sortByType = "По типу",
-	sortByName = "На ім'я",
-	sortByDate = "За датою",
+	sortBy = "Роду",
+	sortByType = "За типом",
+	sortByName = "По імені",
+	sortByDate = "Часами",
 
 	aboutSystem = "Про систему",
-	updates = "Оновлення",
-	update = "Оновити",
-	shutdown = "Вимкнути",
-	logout = "Вiйти",
+	updates = "Новинка",
+	update = "Оновлювати",
+	shutdown = "Вимкнення",
+	logout = "Вихід із системи",
 	reboot = "Перезавантажити",
-	returnToShell = "Повернутися в Shell",
-	
-	shortcutIsCorrupted = "Ярлик посилається на неіснуючий файл",
-	sortAutomatically = "Прив'язати до сітки",
-	onDesktop = "На робочому столі",
-	inCurrentDirectory = "У поточній директорії",
 
-	errorWhileRunningProgram = "Помилка при виконанні ",
-	sendedFeedback = "Звіт відправлений",
-	sendFeedback = "Відправити звіт",
+	shortcutIsCorrupted = "Ярлик пов'язаний з неіснуючим файлом",
+	sortAutomatically = "Вирівняти по сітці",
+	onDesktop = "На робочому столі",
+	inCurrentDirectory = "В поточному каталозі",
+
+	errorWhileRunningProgram = "Помилка під час роботи ",
+	sendedFeedback = "Зворотній зв'язок була відправлена",
+	sendFeedback = "Залиште відгук для",
 	yourContacts = "Ваші контакти",
 	additionalInfo = "Додаткова інформація",
-	stackTraceback = "Стек помилки",
+	stackTraceback = "Трасування стека",
 
-	favourite = "Вибране",
+	favourite = "Коханий",
 	search = "Пошук",
-	mounts = "Пристрої",
+	mounts = "Монтувати",
+
+	uploadToPastebin = "Завантажити в Pastebin",
+	pasteName = "Вставити ім'я",
+	uploading = "Йде завантаження...",
+	uploadingSuccess = "Завантажено в ",
+	uploadingFailure = "Завантаживши:",
 }
