--- a/Localizations/English.lang
+++ b/Localizations/English.lang
@@ -45,12 +45,6 @@
 	copying = "Copying",
 	faylaBlyad = "file",
 
-	resolution = "Screen resolution",
-	pressAnyKeyToContinue = "Press any key to continue",
-	screensaver = "Screensaver",
-	screensaverDelay = "Delay",
-	screensaverEnabled = "Screensaver enabled",
-
 	areYouSure = "Are you sure?",
 	emptyTrash = "Empty trash",
 	type = "Type",
@@ -95,9 +89,6 @@
 	sortByType = "By type",
 	sortByName = "By name",
 	sortByDate = "By date",
-	showExtension = "File extensions",
-	showHiddenFiles = "Hidden files",
-	showApplicationIcons = "Application icons",
 
 	aboutSystem = "About system",
 	updates = "Updates",
@@ -105,60 +96,11 @@
 	shutdown = "Shutdown",
 	logout = "Logout",
 	reboot = "Reboot",
-	returnToShell = "Return to Shell",
 
-	protectYourComputer = "Computer protection",
-	inputPassword = "Input password",
-	confirmInputPassword = "Confirm password",
-	oldPassword = "Old password",
-	newPassword = "New password",
-	setProtectionMethod = "Change computer protection method",
-	wrongOldPassword = "Wrong old password!",
-	passwordSucessfullyChanged = "Password has been successfully changed!",
-	withoutProtection = "Without protection",
-	passwordProtection = "Password protection",
-	biometricProtection = "Biometric protection",
-	putFingerToVerify = "Put your finger to authorize",
-	putFingerToRegister = "Put your finger to create a biometric signature",
-	fingerprintCreated = "Biometric signature has been created",
-	accessDenied = "Access denied",
-	welcomeBack = "Welcome, ",
-	passwordsAreDifferent = "Passwords are different",
-	incorrectPassword = "Incorrect password",
-	mineOSCreatorUsedMasterPassword = "The creator of this operating system has used Master-Password",
-	loginToSystem = "Login",
-
-	systemLanguage = "System language",
-	colorScheme = "Color scheme",
-	iconProperties = "Icons properties",
-	spaceBetweenIcons = "Space bewteen icons",
-	sizeOfIcons = "Size of icons",
-	byHorizontal = "Horizontal",
-	byVertical = "Vertical",
-	wallpaper = "Wallpaper",
-	wallpaperPath = "Path to wallpaper",
-	iconPath = "Path to icon",
-	wallpaperModeStretch = "Stretch",
-	wallpaperModeCenter = "Center",
-	wallpaperEnabled = "Wallpaper enabled",
-	wallpaperBrightness = "Wallpaper brightness",
-	wallpaperSwitchInfo = "Disabling this option will decrease RAM usage and increase system perfomance",
-	backgroundColor = "Background color",
-	menuColor = "Menu color",
-	dockColor = "Dock color",
-	transparencyEnabled = "Transparency enabled",
-	transparencySwitchInfo = "Disabling this option will increase system perfomance",
-	screenResolution = "Screen resolution",
-	changePassword = "Change password",
 	shortcutIsCorrupted = "Shortcut is linked to non-existent file",
 	sortAutomatically = "Align to grid",
 	onDesktop = "On desktop",
 	inCurrentDirectory = "In current directory",
-
-	settings = "Preferences",
-	dateAndTime = "Date and time",
-	timezone = "Timezone",
-	dateFormat = "Date format",
 
 	errorWhileRunningProgram = "Error while running ",
 	sendedFeedback = "Feedback was sent",
@@ -170,4 +112,10 @@
 	favourite = "Favourite",
 	search = "Search",
 	mounts = "Mounts",
+
+	uploadToPastebin = "Upload to Pastebin",
+	pasteName = "Paste name",
+	uploading = "Uploading in progress...",
+	uploadingSuccess = "Uploaded to ",
+	uploadingFailure = "Uploading failed: ",
 }
