--- a/Installer/Localizations/Italian.lang
+++ b/Installer/Localizations/Italian.lang
@@ -9,7 +9,7 @@
 	applications = "Applicazioni di terze parti:",
 	languages = "Pacchetti linguistici:",
 	accept = "Accetto questa merda:",
-	select = ""Selezionare il file system per l'installazione",
+	select = "Selezionare il file system per l'installazione",
 	erase = "Cancellare",
 	used = "utilizzare",
 	setup = "Imposta il tuo profilo",
@@ -17,6 +17,6 @@
 	flashing = "EEPROM lampeggiante...",
 	creating = "Creazione di profilo utente...",
 	installing = "Installare",
-	installed = ""Le miniere sono state installate. Buon appetito!",
+	installed = "Le miniere sono state installate. Buon appetito!",
 	reboot = "Riavviare",
 }
